--- a/docs/projMngmnt/Rev0_Team_Contrib.tex
+++ b/docs/projMngmnt/Rev0_Team_Contrib.tex
@@ -5,7 +5,7 @@
 
 \usepackage{booktabs}
 
-\title{Team Contributions: Rev 0\\\progname}
+\title{Team Contributions: Rev0\\\progname}
 
 \author{\authname}
 
@@ -18,170 +18,321 @@
 
 \maketitle
 
-This document summarizes the contributions of each team member for the Rev 0
-Demo.  The time period of interest is the time between the POC demo and the Rev
-0 demo.
+This document summarizes the contributions of each team member up to the Rev0
+Demo. The time period of interest is the time between the POC demo
+and the Rev0 demo. Specifically, we will be reviewing the period from November 25th until January 29th. For each metric, we will include a table for the period of interest, as well as the entire term. Our work is split over 4 repositories, so when relevant we will specify
+where contributions have been made.
 
 \section{Demo Plans}
 
-\wss{What will you be demonstrating}
+
+
+We will be demonstrating the MVP of OrbitWatch, a crowdsourced data labelling platform.
+
+% \wss{What will you be demonstrating}
 
 \section{Team Meeting Attendance}
 
-\wss{For each team member how many team meetings have they attended over the
-time period of interest.  This number should be determined from the meeting
-issues in the team's repo.  The first entry in the table should be the total
-number of team meetings held by the team.}
+% \wss{For each team member how many team meetings have they attended over the
+% time period of interest.  This number should be determined from the meeting
+% issues in the team's repo.  The first entry in the table should be the total
+% number of team meetings held by the team.}
+
 
 \begin{table}[H]
 \centering
+\textbf{PoC demo to Rev0}\\
 \begin{tabular}{ll}
 \toprule
 \textbf{Student} & \textbf{Meetings}\\
 \midrule
-Total & Num\\
-Name 1 & Num\\
-Name 2 & Num\\
-Name 3 & Num\\
-Name 4 & Num\\
-Name 5 & Num\\
+Total & 4\\
+Kartik & 4\\
+Kyle & 4\\
+Mathew & 4\\
+Oleg & 3\\
 \bottomrule
 \end{tabular}
 \end{table}
 
-\wss{If needed, an explanation for the counts can be provided here.}
+
+\begin{table}[H]
+\centering
+\textbf{Entire Project}\\
+\begin{tabular}{ll}
+\toprule
+\textbf{Student} & \textbf{Meetings}\\
+\midrule
+Total & 14\\
+Kartik & 13\\
+Kyle & 14\\
+Mathew & 14\\
+Oleg & 11\\
+\bottomrule
+\end{tabular}
+\end{table}
+
+
+% \wss{If needed, an explanation for the counts can be provided here.}
+Kartik was available for one of his missed meeting but there were some wifi issues in the thode building where our room was booked. Decided to go through meeting notes in the teams chat. \\
 
 \section{Supervisor/Stakeholder Meeting Attendance}
 
-\wss{For each team member how many supervisor/stakeholder team meetings have
-they attended over the time period of interest.  This number should be determined
-from the supervisor meeting issues in the team's repo.  The first entry in the
-table should be the total number of supervisor and team meetings held by the
-team.  If there is no supervisor, there will usually be meetings with
-stakeholders (potential users) that can serve a similar purpose.}
+% \wss{For each team member how many supervisor/stakeholder team meetings have
+% they attended over the time period of interest.  This number should be determined
+% from the supervisor meeting issues in the team's repo.  The first entry in the
+% table should be the total number of supervisor and team meetings held by the
+% team.  If there is no supervisor, there will usually be meetings with
+% stakeholders (potential users) that can serve a similar purpose.}
+
+
+\begin{table}[H]
+    \centering
+    \textbf{PoC demo to Rev0}\\
+    \begin{tabular}{ll}
+    \toprule
+    \textbf{Student} & \textbf{Meetings}\\
+    \midrule
+    Total  & 0\\
+    Kartik & 0\\
+    Kyle   & 0\\
+    Mathew & 0\\
+    Oleg   & 0\\
+\bottomrule
+\end{tabular}
+\end{table}
+
 
 \begin{table}[H]
 \centering
+\textbf{Entire Project}\\
 \begin{tabular}{ll}
 \toprule
 \textbf{Student} & \textbf{Meetings}\\
 \midrule
-Total & Num\\
-Name 1 & Num\\
-Name 2 & Num\\
-Name 3 & Num\\
-Name 4 & Num\\
-Name 5 & Num\\
+Total  & 2\\
+Kartik & 2\\
+Kyle   & 2\\
+Mathew & 2\\
+Oleg   & 2\\
 \bottomrule
 \end{tabular}
 \end{table}
 
-\wss{If needed, an explanation for the counts can be provided here.}
+% \wss{If needed, an explanation for the counts can be provided here.}
 
 \section{Lecture Attendance}
 
-\wss{For each team member how many lectures have they attended over the time
-period of interest.  This number should be determined from the lecture issues in
-the team's repo.  The first entry in the table should be the total number of
-lectures since the beginning of the term.}
+% \wss{For each team member how many lectures have they attended over the time
+% period of interest.  This number should be determined from the lecture issues in
+% the team's repo.  The first entry in the table should be the total number of
+% lectures since the beginning of the term.}
+
+
+
+\begin{table}[H]
+    \centering
+    \textbf{PoC demo to Rev0}\\
+    \begin{tabular}{ll}
+    \toprule
+    \textbf{Student} & \textbf{Lectures}\\
+    \midrule
+    Total & 2\\
+    Kartik & 0\\
+    Kyle   & 1\\
+    Mathew & 2\\
+    Oleg   & 1\\
+    \bottomrule
+    \end{tabular}
+    \end{table}
+
 
 \begin{table}[H]
 \centering
+\textbf{Entire Project}\\
 \begin{tabular}{ll}
 \toprule
 \textbf{Student} & \textbf{Lectures}\\
 \midrule
-Total & Num\\
-Name 1 & Num\\
-Name 2 & Num\\
-Name 3 & Num\\
-Name 4 & Num\\
-Name 5 & Num\\
+Total & 12\\
+Kartik & 7\\
+Kyle   & 10\\
+Mathew & 11\\
+Oleg   & 9\\
 \bottomrule
 \end{tabular}
 \end{table}
 
-\wss{If needed, an explanation for the lecture attendance can be provided here.}
+% \wss{If needed, an explanation for the lecture attendance can be provided here.}
 
 \section{TA Document Discussion Attendance}
 
-\wss{For each team member how many of the informal document discussion meetings
-with the TA were attended over the time period of interest.}
+% \wss{For each team member how many of the informal document discussion meetings
+% with the TA were attended over the time period of interest.}
+
+\begin{table}[H]
+    \centering
+    \textbf{PoC demo to Rev0}\\
+    \begin{tabular}{ll}
+    \toprule
+    \textbf{Student} & \textbf{Lectures}\\
+    \midrule
+    Total & 1\\
+    Kartik & 0\\
+    Kyle   & 1\\
+    Mathew & 1\\
+    Oleg   & 1\\
+    \bottomrule
+    \end{tabular}
+    \end{table}
 
 \begin{table}[H]
 \centering
+\textbf{Entire Project}\\
 \begin{tabular}{ll}
 \toprule
 \textbf{Student} & \textbf{Lectures}\\
 \midrule
-Total & Num\\
-Name 1 & Num\\
-Name 2 & Num\\
-Name 3 & Num\\
-Name 4 & Num\\
-Name 5 & Num\\
+Total & 4\\
+Kartik & 2\\
+Kyle   & 4\\
+Mathew & 4\\
+Oleg   & 4\\
 \bottomrule
 \end{tabular}
 \end{table}
 
-\wss{If needed, an explanation for the attendance can be provided here.}
+% \wss{If needed, an explanation for the attendance can be provided here.}
+Kartik let the team know well in advance about his different meeting (clash) and made sure the message was conveyed through one of the teammates. He let the TA know himself as well in the next tutorial meeting.
 
 \section{Commits}
 
-\wss{For each team member how many commits to the main branch have been made
-over the time period of interest.  The total is the total number of commits for
-the entire team since the beginning of the term.  The percentage is the
-percentage of the total commits made by each team member.}
+% \wss{For each team member how many commits to the main branch have been made
+% over the time period of interest.  The total is the total number of commits for
+% the entire team since the beginning of the term.  The percentage is the
+% percentage of the total commits made by each team member.}
 
 \begin{table}[H]
-\centering
-\begin{tabular}{lll}
-\toprule
-\textbf{Student} & \textbf{Commits} & \textbf{Percent}\\
-\midrule
-Total & Num & 100\% \\
-Name 1 & Num & \% \\
-Name 2 & Num & \% \\
-Name 3 & Num & \% \\
-Name 4 & Num & \% \\
-Name 5 & Num & \% \\
-\bottomrule
-\end{tabular}
+    \centering
+    \textbf{PoC demo to Rev0}\\
+    \begin{tabular}{lllllll}
+    \toprule
+    \textbf{Student} & \textbf{Commits Main} & \textbf{FE} & \textbf{BE} & \textbf{Model} & \textbf{Total}& \textbf{Percent}\\
+    \midrule
+    Total & 80 & 34 & 17 & 0 & 131 & 100\% \\
+    Kartik & 10 & 0 & 0 & 0 & 10 & 8\%\\
+    Kyle   & 27 & 0 & 3 & 0 & 30 & 23\%\\
+    Mathew & 19 & 34 & 5 & 0 & 58 & 44\% \\
+    Oleg   & 23 &  2 & 9 & 0 & 34 & 26\% \\
+    \bottomrule
+    \end{tabular}
 \end{table}
 
-\wss{If needed, an explanation for the counts can be provided here.  For
-instance, if a team member has more commits to unmerged branches, these numbers
-can be provided here.  If multiple people contribute to a commit, git allows for
-multi-author commits.}
+\begin{table}[H]
+    \centering
+    \textbf{Entire Project}\\
+    \begin{tabular}{lllllll}
+    \toprule
+    \textbf{Student} & \textbf{Commits Main} & \textbf{FE} & \textbf{BE} & \textbf{Model} & \textbf{Total}& \textbf{Percent}\\
+    \midrule
+    Total & 359 & 54 & 31 & 10 & 454 & 100\% \\
+    Kartik & 69 & 0 & 0 & 7 & 76 & 17\%\\
+    Kyle   & 172 & 0 & 12 & 0 & 184 & 41\%\\
+    Mathew & 71 & 52 & 5 & 0 & 128 & 28\% \\
+    Oleg   & 47 &  2 & 14 & 3 & 66 & 15\% \\
+    \bottomrule
+    \end{tabular}
+\end{table}
 
-\section{Issue Tracker}
+% \wss{If needed, an explanation for the counts can be provided here.  For
+% instance, if a team member has more commits to unmerged branches, these numbers
+% can be provided here.  If multiple people contribute to a commit, git allows for
+% multi-author commits.}
+Oleg's commit count is low due to his preference for working in a word processor before transferring completed sections to LaTeX. Most assigned issues were completed in one go, with reviews conducted outside of GitHub's infrastructure. Additional commits result from review feedback or self-corrected typos.
 
-\wss{For each team member how many issues have they authored (including open and
-closed issues (O+C)) and how many have they been assigned (only counting closed
-issues (C only)) over the time period of interest.}
 
+% \wss{For each team member how many issues have they authored (including open and
+% closed issues (O+C)) and how many have they been assigned (only counting closed
+% issues (C only)) over the time period of interest.}
+
+\section{Issues} 
 \begin{table}[H]
 \centering
+\textbf{PoC demo to Rev0}\\
 \begin{tabular}{lll}
 \toprule
 \textbf{Student} & \textbf{Authored (O+C)} & \textbf{Assigned (C only)}\\
 \midrule
-Name 1 & Num & Num \\
-Name 2 & Num & Num \\
-Name 3 & Num & Num \\
-Name 4 & Num & Num \\
-Name 5 & Num & Num \\
+Total & 56 & 52 \\
+Kartik & 10 & 12\\
+Kyle   & 17 & 13\\
+Mathew & 23 & 18\\
+Oleg   & 6 & 9\\
 \bottomrule
 \end{tabular}
 \end{table}
 
-\wss{If needed, an explanation for the counts can be provided here.}
 
+\begin{table}[H]
+\centering
+\textbf{Entire Project}\\
+\begin{tabular}{lll}
+\toprule
+\textbf{Student} & \textbf{Authored (O+C)} & \textbf{Assigned (C only)}\\
+\midrule
+Total & 158 & 130 \\
+Kartik & 10 & 23\\
+Kyle   & 78 & 39\\
+Mathew & 47 & 40\\
+Oleg   & 23 & 28\\
+\bottomrule
+\end{tabular}
+\end{table}
+
+% \wss{If needed, an explanation for the counts can be provided here.}
+The number of issues assigned to Kartik might look less but this was because he took up other responsibilites, one being doing the reflections for the documents.\\
+Kyle was the only team member to create and assign issues during the first deliverable. This was prior to completing our team git protocol, so other team members did not create issues and therefore Kyle has 8 additional issues created. Kyle also authors meeting issues.
 \section{CICD}
 
-\wss{Say how CICD is used in your project}
+See section 7.2 of development plan found \href{https://github.com/OKKM-insights/OKKM.insights/blob/main/docs/DevelopmentPlan/DevelopmentPlan.pdf}{here}.
 
-\wss{If your team has additional metrics of productivity, please feel free to
-add them to this report.}
+% \wss{If your team has additional metrics of productivity, please feel free to
+% add them to this report.}
+\section{Additional Metrics}
+Number of Pull requests reviewed:
 
+\begin{table}[H]
+    \centering
+    \textbf{Entire Project}\\
+    \begin{tabular}{llll}
+    \toprule
+    \textbf{Student} & \textbf{Authored (O+C)} & \textbf{Reviewed} & \textbf{Peer's Reviewed}\\
+    \midrule
+    Total & 96 & 65 & \\
+    Kartik & 19 & 7 & 5\\
+    Kyle   & 33 & 34 & 29\\
+    Mathew & 53 & 32 & 32\\
+    Oleg   & 26 & 2 & 0\\
+    \bottomrule
+    \end{tabular}
+    \end{table}
+
+Peer review feedback for team 17:
+
+    \begin{table}[H]
+        \centering
+        \textbf{Entire Project}\\
+        \begin{tabular}{lll}
+        \toprule
+        \textbf{Student} & \textbf{Authored (O+C)}\\
+        \midrule
+        Total & 22\\
+        Kartik & 0\\
+        Kyle   & 6 \\
+        Mathew & 16 \\
+        Oleg   & 0 \\
+        
+        \bottomrule
+        \end{tabular}
+        \end{table}
 \end{document}
